--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="container">
+      <span class="text-muted" style="float: right;">Made by Federico Ruiz 
+        <a href="https://github.com/FedericoRuiz98" target="_blank" class="ml-2 text-waste"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/federico-ruiz-87a94b159/" target="_blank" class="ml-2 text-waste"><i class="fab fa-linkedin"></i></a>
+      </span>
+    </div>
+  </footer>
