--- a/src/app/components/gastos/gastos.component.html
+++ b/src/app/components/gastos/gastos.component.html
@@ -1,106 +1,19 @@
-<div class="card text-left shadow">
-  <div class="card-header text-center">
-    <h3 class="my-0 fw-normal"><i class="text-danger fas fa-chevron-circle-down"></i> Registrar Nuevo Gasto</h3>
-  </div>
-  <div class="card-body">
+<app-gasto-form 
+  (chargeItemsEmitter)="onCategoriasReady($event)"
+  (subCategoriasEmitter)="onSubCategoria($event)"
+  (categoriaIndexEmitter)="onCategoriaIndex($event)"
+  (categoriaEmitter)="onCategoria($event)"
+  (EgresoIndexEmitter)="onEgreso($event)"
+  (PasivoIndexEmitter)="onPasivo($event)"
+  [categorias]="categorias"
+  [subCategorias]="subCategorias"
+  [formasDePago]="formasDePago"
+  [categoriasSubCategorias]="categoriasSubCategorias">
+</app-gasto-form>
 
-    <form>
-      <div class="row mb-3">
-        <div class="col-6">
-          <div class="form-group">
-            <label for="sel1">Categoria</label>
-            <select class="form-control" #categoriaSelect (change)='categoriaChange(categoriaSelect.value)'>
-              <option hidden disabled selected value>-</option>
-              <option *ngFor="let cat of categorias" value="{{cat.idCategoria}}">{{cat.nombre}}</option>
-            </select>
-          </div> 
-        </div>
-        <div class="col-6">
-          <label for="Concpeto" class="form-label">Concpeto (opcional)</label>
-          <input type="text" class="form-control" id="Concpeto" placeholder="concepto"> 
-        </div>        
-      </div>
-
-      <div class="row mb-3">        
-        <div class="col-sm-6">
-          <div class="form-group">
-            <label for="sel1">Forma de pago</label>
-            <select class="form-control" #formaDePagoSelect (change)='formaDePagoChange(formaDePagoSelect.value)'>
-              <option hidden disabled selected value>-</option>
-              <option *ngFor="let f of formasDePago" value="{{f.idFormaDePago}}">{{f.nombre}}</option>
-            </select>
-          </div> 
-        </div>
-        <div class="col-sm-3" *ngIf="isCredito">
-          <label for="cuotas" class="form-label">Cuotas</label>
-          <input type="number" class="form-control" id="cuotas" placeholder="cuotas" min="1">
-        </div>   
-        <div class="col-sm-3" *ngIf="isCredito">
-          <label for="interes" class="form-label">Interes (opcional)</label>
-          <input type="number" class="form-control" id="interes" placeholder="interes" min="0">
-        </div>  
-      </div>
-
-      <div class="text-center">
-        <button type="button" class=" btn btn-info" style="width: 30%;" (click)="categoriasReady(categoriaSelect.value,formaDePagoSelect.value)"><i class="far fa-hand-point-down"></i> Cargar Items</button> 
-      </div>   
-    </form>
-
-  </div>
-</div>
-
-<div class="card text-left shadow mt-2" *ngIf="chargeItems">
-  <div class="card-body">
-    <h4>Carga de Items <span *ngIf="categoria">-  <i class="{{categoriaIcons[categoriaIndex-1]}}"></i> {{categoria}}</span></h4>
-
-    <div class="row mb-1">        
-      <div class="col-sm-5">
-        <div class="form-group">
-          <label for="sel1">Sub Categoria</label>
-          <select class="form-control" #subCategoia>
-            <option hidden disabled selected value>-</option>
-            <option *ngFor="let sc of subCategorias" value="{{sc.idSubCategoria}}">{{sc.nombre}}</option>
-          </select>
-        </div> 
-      </div>
-      <div class="col-sm-3">
-        <label for="Monto" class="form-label">Monto</label>
-        <input type="number" class="form-control" id="Monto" placeholder="monto" min="1"  #monto>
-      </div>   
-      <div class="col-sm-3">
-        <label for="Concepto" class="form-label">Concepto (opcional)</label>
-        <input type="text" class="form-control" id="Concepto" placeholder="concepto" #concepto>
-      </div>  
-      <div class="col-sm-1 text-center">
-        <button type="button" class="btn btn-info btnAdd" (click)="addGasto(monto.value,concepto.value,subCategoia.value)"><i class="fas fa-plus-circle"></i></button>
-      </div>
-    </div>
-
-    <div *ngIf="gastos.length >0">
-      <h4 class="mb-3" style="float: left;">Total: 30000</h4>
-
-      <table class="table table-hover table-sm" >
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Categoria</th>
-            <th>Concepto</th>
-            <th>Monto</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let g of gastos"> 
-            <td scope="row">{{g.idGasto}}</td>
-            <td>{{categorias[g.idCategoria]}}</td>
-            <td>{{g.concepto}}</td>
-            <td>{{g.monto}}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>    
-
-    <div class="text-center">
-      <button type="button" class=" btn btn-info" style="width: 30%;"><i class="fas fa-save"></i> Registrar Gasto</button> 
-    </div>    
-  </div>
-</div>
+<app-gasto-add-items
+  [chargeItems]="chargeItems"
+  [categoriaIndex]="categoriaIndex"
+  [categoria]="categoria"
+  [subCategorias]="subCategoriasSelect">
+</app-gasto-add-items>
