--- a/src/app/components/shared/dashboard/dashboard.component.scss
+++ b/src/app/components/shared/dashboard/dashboard.component.scss
@@ -1,6 +1,6 @@
 .sidebar {
   margin-left: -300px;
-  margin-top: 49px;
+  margin-top: 0px; //49
   left: 70px;
   width: 200px;
   position: fixed;
@@ -15,9 +15,9 @@
   transition: all 0.4s ease 0s;
   background-color: #eee;
   width: 100%;
-  padding: 0px 10px;
+  padding: 0; //0px 10px;
   margin-left: 0;
-  padding-top: 70px;
+  padding-top: 0px; //70px;
   min-height: 100vh;
 }
 
