--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,5 +1,22 @@
-<nav class="navbar navbar-dark bg-dark shadow fixed-top">
-  <a class="navbar-brand text-info" href="#">My Waste App</a>
+<nav class="navbar navbar-ligth bg-light shadow fixed-top">  
 
-  <button type="button" class="btn btn-outline-info" (click)="toggleSideBar()"><i class="fas fa-bars"></i></button>
+  <ul class="navbar-nav mr-auto">
+    <button type="button" class="btn" (click)="toggleSideBar()"><i class="fas fa-bars text-waste"></i></button>
+  </ul>
+  
+  
+  <ul class="navbar-nav"> 
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle nav-custom" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <img src="/assets/svg/MyWasteAppLogo.svg" class="avatar img-fluid rounded-circle mr-1">
+          Federico Ruiz
+        </a>
+        <div class="dropdown-menu position-absolute dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item nav-custom" href="#"><i class="text-waste fas fa-user"></i> Cuenta</a>
+          <a class="dropdown-item nav-custom" href="#"><i class="text-waste fas fa-cog"></i> Configuracion</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item nav-custom" href="#"><i class="text-waste fas fa-sign-out-alt"></i> Cerrar Sesion</a>
+        </div>
+      </li>
+  </ul>
 </nav>
