--- a/src/app/components/layout/dashboard/dashboard.component.html
+++ b/src/app/components/layout/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
     <app-header class="header" (sidebarShow)="onSidebar($event)"></app-header>
     <main class="col">
         <div class="mt-3">
-            <app-gastos></app-gastos>
+            <ng-content></ng-content>            
         </div>                
     </main>
   </div>
