--- a/src/app/components/shared/cargando/cargando.component.html
+++ b/src/app/components/shared/cargando/cargando.component.html
@@ -1,4 +1,4 @@
-<div class="text-center text-waste" *ngIf="!isLoaded">
+<div class="text-center text-waste mt-2 mb-3" *ngIf="!isLoaded">
     <div class="spinner-border" role="status"></div>
-    <span class="ml-2 h2">Cargando</span>       
+    <span class="ml-2 h3">Cargando</span>       
 </div>
