--- a/src/customize-bootstrap.scss
+++ b/src/customize-bootstrap.scss
@@ -1,8 +1,11 @@
-
 $violeta: #84329b;
 
 $theme-colors: (
   "waste": $violeta,
   "green": #28a745,
-  "success": $violeta  
+  "success": $violeta,
+  "Supermercado": #3498db,
+  "Compra": #f4d03f,
+  "Vehiculo": #e74c3c,
+  "Salida": #6c3483,
 );
