--- a/src/app/components/views/gastos-charge/gasto-form/gasto-form.component.html
+++ b/src/app/components/views/gastos-charge/gasto-form/gasto-form.component.html
@@ -8,7 +8,7 @@
 
       <form *ngIf="isLoaded">
         <div class="row mb-3">
-          <div class="col-6">
+          <div class="col-5">
             <div class="form-group">
               <label for="sel1">Categoria</label>
               <select class="custom-select" 
@@ -21,12 +21,18 @@
               </select>
             </div> 
           </div>
-          <div class="col-6">
+          <div class="col-5">
             <label for="Concpeto" class="form-label">Concpeto (opcional)</label>
             <input type="text" class="form-control" id="Concpeto" placeholder="concepto"
               [ngClass]="{'is-valid': chargeItems}"
               [disabled]="chargeItems"> 
           </div>        
+          <div class="col-2">            
+            <label for="Concpeto" class="form-label">Fecha</label>
+              <div class='input-group date' id='datetimepicker1'>
+                  <input type='date' class="form-control" [value]="currentDateString" disabled/>
+              </div>
+          </div>          
         </div>
   
         <div class="row mb-3">        
@@ -60,12 +66,13 @@
         <p *ngIf="categoriaFromsFeedback" class="text-danger"><i class="fas fa-exclamation-triangle"></i> {{categoriaFromsFeedback}}</p>
   
         <div class="text-center" *ngIf="!chargeItems">
-          <button type="button" class=" btn" style="width: 30%;" 
+          <button type="button" class="mr-1 btn" style="width: 20%;" 
             (click)="categoriasReady(+categoriaSelect.value,+formaDePagoSelect.value)" 
             [disabled]="chargeItems"
             [ngClass]="{'btn-success': chargeItems,'btn-waste': !chargeItems}">
             <i class="far fa-hand-point-down"></i> Cargar Items
           </button> 
+          <button type="button" class="ml-1 btn btn-outline-waste" style="width: 20%;">Carga Rapida</button>
         </div>   
       </form>
   
