--- a/src/app/components/auth/login/login.component.scss
+++ b/src/app/components/auth/login/login.component.scss
@@ -1,5 +1,9 @@
 .login-card {
-    max-width: 40vw;
+    max-width: 450px;
     margin: auto;
     margin-top: 10vh;
+}
+
+.login-google:hover {
+    background-color: #eaeaea;
 }
