--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -14,7 +14,10 @@
                     class="form-control"
                     formControlName="email"
                     placeholder="Email"
-                    required/>
+                    required
+                    [ngClass]="{
+                        'is-valid': email && email.valid,
+                        'is-invalid': email && email.errors && (email.dirty || email.touched)}"/>
                 </div>
 
                 <div class="form-group mt-1">
@@ -24,14 +27,19 @@
                     class="form-control"
                     formControlName="password"
                     placeholder="Contraseña"
-                    required/>
+                    required
+                    [ngClass]="{
+                        'is-valid': password && password.valid,
+                        'is-invalid': password && password.errors && (password.dirty || password.touched)}"/>
                 </div>
+
+                <p class="text-danger" *ngIf="feedback"><i class="fas fa-exclamation-triangle"></i> {{feedback}}</p>
 
                 <button [disabled]="!LoginForm.valid" class="btn btn-waste btn-lg btn-block mt-4 shadow">
                 Ingresar <i class="fas fa-sign-in-alt"></i>
                 </button>
 
-                <button class="btn btn-ligth btn-lg btn-block mt-4 login-google shadow"> 
+                <button class="btn btn-ligth btn-lg btn-block mt-4 login-google" (click)="loginGoogle()"> 
                     <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
                      Ingresar con Google
                 </button>
