--- a/src/app/components/auth/login/login.component.scss
+++ b/src/app/components/auth/login/login.component.scss
@@ -1,9 +1,14 @@
 .login-card {
-    max-width: 450px;
-    margin: auto;
-    margin-top: 10vh;
+  max-width: 450px;
+  margin: auto;
+  margin-top: 10vh;
 }
 
 .login-google:hover {
-    background-color: #eaeaea;
+  background-color: #eaeaea;
+  box-shadow: 0 0.4rem 1rem rgba(0, 0, 0, 0.15);
+}
+
+.login-google {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15);
 }
