Agregar Gastos variables adaptado
-uso de interfaces
-servicios adaptados para firebase
-detectar dispositivo
-cambio de password

--- a/src/app/components/auth/login/login.component.scss
+++ b/src/app/components/auth/login/login.component.scss
@@ -1,7 +1,8 @@
 .login-card {
   max-width: 450px;
+  min-width: 400px;
   margin: auto;
-  margin-top: 10vh;
+  margin-top: auto
 }
 
 .login-google:hover {
