--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center d-flex flex-column min-vh-100 justify-content-center align-items-center">
     <div class="card login-card shadow">
         <div class="card-body">
             <div class="brand-wrapper text-center">
@@ -10,6 +10,7 @@
                 <div class="form-group">
                 <label class="text-muted" for="email"><i class="fas fa-envelope text-waste"></i> Email</label>
                 <input
+                    id="emailLogin"
                     type="email"
                     class="form-control"
                     formControlName="email"
@@ -23,6 +24,7 @@
                 <div class="form-group mt-1">
                 <label class="text-muted" for="password"><i class="fas fa-key text-waste"></i> Contraseña</label>
                 <input
+                    id="passwordLogin"
                     type="password"
                     class="form-control"
                     formControlName="password"
@@ -38,16 +40,15 @@
                 <button [disabled]="!LoginForm.valid" class="btn btn-waste btn-lg btn-block mt-4 shadow">
                 Ingresar <i class="fas fa-sign-in-alt"></i>
                 </button>
-
-                <button class="btn btn-ligth btn-lg btn-block mt-4 login-google" (click)="loginGoogle()"> 
-                    <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
-                     Ingresar con Google
-                </button>
-
             </form>
 
+            <button class="btn btn-ligth btn-lg btn-block mt-4 login-google" (click)="loginGoogle()"> 
+                <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+                 Ingresar con Google
+            </button>
+
             <div class="mt-3">
-                <a href="#!" class="forgot-password-link text-secondary">Olvidaste tu contraseña?</a>
+                <a href="#!" class="forgot-password-link text-secondary" routerLink="/recover-password">Olvidaste tu contraseña?</a>
                 <p class="login-card-footer-text">
                 No tienes una cuenta?
                 <a class="text-secondary" href="#!" routerLink="/register">Registrate aqui</a>
