--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center d-flex flex-column min-vh-100 justify-content-center align-items-center">
     <div class="card login-card shadow">
         <div class="card-body">
             <div class="brand-wrapper text-center">
