--- a/src/app/components/auth/register/register.component.scss
+++ b/src/app/components/auth/register/register.component.scss
@@ -1,5 +1,6 @@
 .login-card {
-    max-width: 450px;
-    margin: auto;
-    margin-top: 10vh;
+  max-width: 450px;
+  min-width: 400px;
+  margin: auto;
+  margin-top: auto;
 }
