--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -6,16 +6,19 @@
   
   
   <ul class="navbar-nav"> 
-    <li class="nav-item dropdown">
+    <li class="nav-item dropdown" *ngIf="usuario">
         <a class="nav-link dropdown-toggle nav-custom" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="/assets/svg/MyWasteAppLogo.svg" class="avatar img-fluid rounded-circle mr-1">
-          Federico Ruiz
+          <img *ngIf="usuario?.photoURL" src="{{usuario?.photoURL}}" class="avatar img-fluid rounded-circle mr-1">
+          <img *ngIf="!usuario?.photoURL" src="/assets/svg/MyWasteAppLogo.svg" class="avatar img-fluid rounded-circle mr-1">
+
+          <span *ngIf="desktop">{{usuario?.displayName}}</span>
+          <span *ngIf="!usuario.displayName && desktop">{{usuario?.email}}</span>
         </a>
         <div class="dropdown-menu position-absolute dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item nav-custom" href="#"><i class="text-waste fas fa-user"></i> Cuenta</a>
           <a class="dropdown-item nav-custom" href="#"><i class="text-waste fas fa-cog"></i> Configuracion</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item nav-custom" href="#"><i class="text-waste fas fa-sign-out-alt"></i> Cerrar Sesion</a>
+          <a class="dropdown-item nav-custom" href="#" (click)="logOut()"><i class="text-waste fas fa-sign-out-alt"></i> Cerrar Sesion</a>
         </div>
       </li>
   </ul>
