--- a/src/app/components/views/gastos-charge/gasto-form/gasto-form.component.html
+++ b/src/app/components/views/gastos-charge/gasto-form/gasto-form.component.html
@@ -1,6 +1,9 @@
 <div class="card text-left shadow">
     <div class="card-header text-center bg-waste">
-      <h3 class="my-0 fw-normal text-white"><i class="text-white fas fa-chevron-circle-down"></i> Registrar Nuevo Gasto</h3>
+      <h3 class="my-0 fw-normal text-white"
+        [ngStyle]="{'font-size': !desktop ? '1rem' : ''}">
+        <i class="text-white fas fa-chevron-circle-down"></i> Registrar Nuevo Gasto
+      </h3>
     </div>
     <div class="card-body">
   
@@ -8,7 +11,7 @@
 
       <form *ngIf="isLoaded">
         <div class="row mb-3">
-          <div class="col-5">
+          <div class="col-sm-5">
             <div class="form-group">
               <label for="sel1">Categoria</label>
               <select class="custom-select" 
@@ -17,17 +20,19 @@
                 [ngClass]="{'is-valid': chargeItems}"
                 [disabled]="chargeItems">
                 <option hidden disabled selected value>-</option>
-                <option *ngFor="let cat of categorias" value="{{cat.idCategoria}}">{{cat.nombre}}</option>
+                <option *ngFor="let cat of categorias | async" value="{{cat.id}}">{{cat.categoria}}</option>
               </select>
             </div> 
           </div>
-          <div class="col-5">
+          <div class="col-sm-5">
             <label for="Concpeto" class="form-label">Concpeto (opcional)</label>
-            <input type="text" class="form-control" id="Concpeto" placeholder="concepto"
+            <input type="text" class="form-control" placeholder="concepto"
               [ngClass]="{'is-valid': chargeItems}"
-              [disabled]="chargeItems"> 
+              [disabled]="chargeItems"
+              [(ngModel)]="Concepto" 
+              [ngModelOptions]="{standalone: true}"> 
           </div>        
-          <div class="col-2">            
+          <div class="col-sm-2">            
             <label for="Concpeto" class="form-label">Fecha</label>
               <div class='input-group date' id='datetimepicker1'>
                   <input type='date' class="form-control" [value]="currentDateString" disabled/>
@@ -45,34 +50,41 @@
                 [ngClass]="{'is-valid': chargeItems}"
                 [disabled]="chargeItems">
                 <option hidden disabled selected value>-</option>
-                <option *ngFor="let f of formasDePago" value="{{f.idFormaDePago}}">{{f.nombre}}</option>
+                <option *ngFor="let f of formasDePago | async" value="{{f.id}}">{{f.nombre}}</option>
               </select>
             </div> 
           </div>
-          <div class="col-sm-3" *ngIf="isCredito">
+          <div class="col-sm-3" *ngIf="formaDePago?.cuotas">
             <label for="cuotas" class="form-label">Cuotas</label>
             <input type="number" class="form-control" id="cuotas" placeholder="cuotas" min="1"
               [ngClass]="{'is-valid': chargeItems}"
-              [disabled]="chargeItems">
+              [disabled]="chargeItems"
+              [(ngModel)]="cuotas" 
+              [ngModelOptions]="{standalone: true}">
           </div>   
-          <div class="col-sm-3" *ngIf="isCredito">
+          <div class="col-sm-3" *ngIf="formaDePago?.interes">
             <label for="interes" class="form-label">Interes (opcional)</label>
             <input type="number" class="form-control" id="interes" placeholder="interes" min="0"
               [ngClass]="{'is-valid': chargeItems}"
-              [disabled]="chargeItems">
+              [disabled]="chargeItems"
+              [(ngModel)]="interes" 
+              [ngModelOptions]="{standalone: true}">
           </div>  
         </div>
   
         <p *ngIf="categoriaFromsFeedback" class="text-danger"><i class="fas fa-exclamation-triangle"></i> {{categoriaFromsFeedback}}</p>
   
         <div class="text-center" *ngIf="!chargeItems">
-          <button type="button" class="mr-1 btn" style="width: 20%;" 
-            (click)="categoriasReady(+categoriaSelect.value,+formaDePagoSelect.value)" 
+          <button type="button" class="mt-2 btn" style="width: 20%;" 
+            (click)="generateEgreso()" 
             [disabled]="chargeItems"
-            [ngClass]="{'btn-success': chargeItems,'btn-waste': !chargeItems}">
+            [ngClass]="{'btn-success': chargeItems,'btn-waste': !chargeItems}"
+            [ngStyle]="desktop ? {'width':  '20%','margin-rigth' : '15px' } : {'width':  '100%'}">
             <i class="far fa-hand-point-down"></i> Cargar Items
           </button> 
-          <button type="button" class="ml-1 btn btn-outline-waste" style="width: 20%;">Carga Rapida</button>
+          <button type="button" class="mt-2 btn btn-outline-waste"
+            [ngStyle]="desktop ? {'width':  '20%','margin-left' : '15px' } : {'width':  '100%'}">Carga Rapida
+          </button>
         </div>   
       </form>
   
