--- a/src/app/components/views/gastos-variables/gasto-info/gasto-info.component.html
+++ b/src/app/components/views/gastos-variables/gasto-info/gasto-info.component.html
@@ -13,7 +13,7 @@
     <tbody>
     <tr *ngFor="let g of gastos; index as i"> 
         <td class="col-2" scope="row">{{i+1}}</td>
-        <td class="col-4">{{g.subCategoriaNombre}}</td>
+        <td class="col-4">{{g.subCategoria}}</td>
         <td class="col-3">{{g.concepto}}</td>
         <td class="col-3" [ngClass]="{'text-green': g.monto<0,'text-danger': g.monto>0}">
             <div *ngIf="g.monto<0">
