lista de gastos 💵
- lista de gastos actualizada para firebase

--- a/src/app/components/layout/sidebar/sidebar.component.html
+++ b/src/app/components/layout/sidebar/sidebar.component.html
@@ -37,7 +37,7 @@
             
             <a class="nav-custom" role="button"
             [routerLink]="['/gastos/variables']">                                
-                <p class="font-weight-light"><i class="fas fa-list"></i> Listas</p>
+                <p class="font-weight-light"><i class="fas fa-list"></i> Gastos variables</p>
             </a>
         </li>         
 
