--- a/src/customize-bootstrap.scss
+++ b/src/customize-bootstrap.scss
@@ -4,8 +4,11 @@ $theme-colors: (
   "waste": $violeta,
   "green": #28a745,
   "success": $violeta,
+
   "Supermercado": #3498db,
-  "Compra": #f4d03f,
+  "Shoping": #ffc107,
   "Vehiculo": #e74c3c,
-  "Salida": #6c3483,
+  "Salida": #e3a5b0,
+  "Delivery":#28a745,
+  "Deportes": #fd7e14
 );
