--- a/src/app/components/auth/recover-password/recover-password.component.html
+++ b/src/app/components/auth/recover-password/recover-password.component.html
@@ -40,6 +40,13 @@
                     Ingresa a tu cuenta <i class="fas fa-sign-in-alt"></i>
                 </button>
             </div>
+
+            <div class="mt-3">
+                <p class="login-card-footer-text">
+                Ya recuerdas tu Contraseña?
+                <a class="text-secondary" href="#!" routerLink="/login">Ingresa aqui</a>
+                </p>
+            </div>
         </div>
     </div>
 </div>
