--- a/src/customize-bootstrap.scss
+++ b/src/customize-bootstrap.scss
@@ -10,5 +10,6 @@ $theme-colors: (
   "Vehiculo": #e74c3c,
   "Salida": #e3a5b0,
   "Delivery":#28a745,
-  "Deportes": #fd7e14
+  "Deportes": #fd7e14,
+  "Viajes": #84329b
 );
