--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="container text-center d-flex flex-column min-vh-100 justify-content-center align-items-center">
-    <div class="card login-card shadow">
+    <div class="card login-card shadow"
+        [ngStyle]="{'min-width': !desktop ? '90vw' : '450px'}">
         <div class="card-body">
             <div class="brand-wrapper text-center">
                 <img src="/assets/svg/MyWasteAppLogo.svg" width="90" height="90" class="mb-1">
