--- a/src/app/components/layout/dashboard/dashboard.component.html
+++ b/src/app/components/layout/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
 <div id="wrapper" class="d-flex {{toggled}}">
   <div id="sidebar-wrapper" class="bg-ligth sidebar">
-    <app-sidebar></app-sidebar>
+    <app-sidebar (sidebarShow)="onSidebar($event)"></app-sidebar>
   </div>
   
 
   <div id="page-content-wrapper" class="main pb-4">
-    <app-header class="header" (sidebarShow)="onSidebar($event)"></app-header>
+    <app-header class="header {{headerTop}}" (sidebarShow)="onSidebar($event)"></app-header>
     <main class="col">
         <div class="mt-3">
             <ng-content></ng-content>            
