--- a/src/app/components/layout/sidebar/sidebar.component.scss
+++ b/src/app/components/layout/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 .sidebar-sticky {
   position: sticky;
   top: 0;
-  height: 100%; //calc(100vh - 48px);
+  height: 100vh; //calc(100vh - 48px);
   padding-top: 0.5rem;
   overflow-x: hidden;
   overflow-y: auto;
