--- a/src/app/components/views/gastos-charge/gasto-form/gasto-form.component.html
+++ b/src/app/components/views/gastos-charge/gasto-form/gasto-form.component.html
@@ -71,22 +71,48 @@
               [ngModelOptions]="{standalone: true}">
           </div>  
         </div>
+
+        <div class="row mb-3" *ngIf="fastCharge">
+          <div class="col-sm-5">
+            <label for="Total" class="form-label">Total</label>
+            <input type="number" class="form-control" placeholder="Total" min="1" required
+              [(ngModel)]="total"
+              [ngModelOptions]="{standalone: true}"> 
+          </div> 
+        </div>
   
         <p *ngIf="categoriaFromsFeedback" class="text-danger"><i class="fas fa-exclamation-triangle"></i> {{categoriaFromsFeedback}}</p>
   
-        <div class="text-center" *ngIf="!chargeItems">
+        <div class="text-center" *ngIf="!chargeItems && !fastCharge">
           <button type="button" class="mt-2 btn" style="width: 20%;" 
-            (click)="generateEgreso()" 
+            (click)="generateEgreso(false)" 
             [disabled]="chargeItems"
             [ngClass]="{'btn-success': chargeItems,'btn-waste': !chargeItems}"
             [ngStyle]="desktop ? {'width':  '20%','margin-rigth' : '15px' } : {'width':  '100%'}">
             <i class="far fa-hand-point-down"></i> Cargar Items
           </button> 
           <button type="button" class="mt-2 btn btn-outline-waste"
+            (click)="generateFastCharge()"
             [ngStyle]="desktop ? {'width':  '20%','margin-left' : '15px' } : {'width':  '100%'}">Carga Rapida
           </button>
         </div>   
+
+        <div class="text-center" *ngIf="fastCharge">
+          <button type="button" class="mt-2 btn btn-waste"
+            (click)="saveGastos()"
+            data-toggle="modal" 
+            data-target="#Modal"
+            [ngStyle]="desktop ? {'width':  '20%','margin-left' : '15px' } : {'width':  '100%'}"><i class="fas fa-save"></i> Registrar Gasto
+          </button>
+        </div>  
       </form>
+
+      <app-notificacion-modal
+        [title]="'Operacion Completada'"
+        [subtitle]="'Los Gastos se han registrado correctamente en la Base de datos'"
+        [descp]="'Total de '+total"
+        [url]="'gastos/variables'">
+      </app-notificacion-modal>
   
     </div>
   </div>
